# understanding_cpp

./: .gitignore  README.md
compiling_and_linking/: README.md  binaryApp  summer.cpp  summer.h  test.cpp
how_cmake_works/: .gitignore  CMakeLists.txt  README.md
